# aseprite-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/aseprite_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
src/aseprite_mcp/lua/: __init__.py  analysis.py  animation.py  antialiasing.py  auto_shading.py  batch.py  canvas.py  core.py  dithering.py  drawing.py  export.py  inspection.py  palette.py  pixelize.py  quantization.py  selection.py  transform.py
src/aseprite_mcp/tools/: __init__.py  analysis.py  animation.py  antialiasing.py  auto_shading.py  batch.py  canvas.py  common.py  dithering.py  drawing.py  export.py  inspection.py  palette.py  pixelize.py  plan.py  quantization.py  selection.py  transform.py
